--- a/Desafio HTML5/_css/style.css
+++ b/Desafio HTML5/_css/style.css
@@ -32,11 +32,8 @@ h1 a{
     color: whitesmoke;
 }
 
-#form{
-    margin: auto;
-}
-
 div{
+    display: block;
     border: none;
     margin-top: 50px;
     padding: 5px;
@@ -45,21 +42,23 @@ div{
 }
 
 nav{
-    display: block;
+    margin-bottom: 1%;
 }
 
 nav ul{
-    display: block;
+    width:100%;
+    display: flex;
+    flex-wrap: wrap;
     font-family: 'Comfortaa', cursive;
     list-style: none;
     text-transform: uppercase;
-
-   color: black;
-   padding: 5px;
+    margin: auto;
+    color: black;
+    padding: 5px;
 }
 
 nav ul li{
-    display: inline-block;
+    text-align: center;
     background-color: #4c2332;
     color: whitesmoke;
     padding: 10px;
@@ -73,24 +72,28 @@ nav ul li{
     box-shadow: 1px 1px 1px black;
 }
 
-#fav-list a, #all-list a, #add-list a, #edit-list a{
+nav ul li:hover{
+    background-color: #e4959e;
+    color: black;
+}
+
+.list a{
     text-decoration: none;
     color: whitesmoke;
      /* border: 1px solid red;  */
     padding: 10px;
 }
 
-nav ul li:hover{
-    background-color: #e4959e;
+.list:hover{
+    cursor: pointer;
+}
+
+.list a:hover{
     color: black;
 }
 
 #fav-list:hover{
     background-color: #ffff80;
-}
-
-#fav-list:hover a, #all-list:hover a, #add-list:hover a, #edit-list:hover a{
-    color: black;
 }
 
 #add-list:hover{
@@ -105,18 +108,11 @@ nav ul li:hover{
     background-color: #56cbf9;
 }
 
-#fav-list:hover, #add-list:hover, #rm-list:hover, #edit-list:hover{
-    cursor: pointer;
-}
-
-form{
-    display:flex;
-    margin: auto auto auto 45%;
-    
-}
-
-#pSearch{
-    display: inline;
+.search{
+    margin: auto;
+    margin-bottom: 1%;
+    padding: auto;
+    float: right;
 }
 
 #iSearch{
@@ -127,7 +123,7 @@ form{
     width: 50%;
 }
 
-#buttonSearch{
+.ani-button{
     display: inline-block;
     border-radius: 4px;
     cursor: pointer;
@@ -141,30 +137,30 @@ form{
     transition: all 0.5s;
 }
 
-#buttonSearch span {
+.ani-button span {
     cursor: pointer;
     display: inline-block;
     position: relative;
     transition: 0.5s;
-  }
+}
 
-  #buttonSearch span:after {
+.ani-button span:after {
     content: '\00bb';
     position: absolute;
     opacity: 0;
     top: 0;
     right: -20px;
     transition: 0.5s;
-  }
+}
 
-  #buttonSearch:hover span {
+.ani-button:hover span {
     padding-right: 25px;
-  }
+}
   
-  #buttonSearch:hover span:after {
+.ani-button:hover span:after {
     opacity: 1;
     right: 0;
-  }
+}
 
 table{
     border: 1px solid black;
@@ -219,7 +215,7 @@ td a:hover{
     width: 4%;
 }
 
-img:hover{
+.star-img{
     cursor: pointer;
 }
 
@@ -259,8 +255,36 @@ img:hover{
         }
     }
 
+    @media only screen and (max-width: 800px) {
+        .col2{
+            display: none;
+        }
+        table td{
+            height: 2em;
+        }
+        table td input[type=checkbox]{
+            height: 2em;
+            width: 2em;
+        }
+        #iSearch{
+            height: 2em;
+            width: 12em;
+        }
+      }
+
   @media only screen and (max-width: 600px) {
     .col2, .col3{
         display: none;
+    }
+    table td{
+        height: 2em;
+    }
+    table td input[type=checkbox]{
+        height: 2em;
+        width: 2em;
+    }
+    #iSearch{
+        height: 2em;
+        width: 12em;
     }
   }
