--- a/Desafio HTML5/_css/form.css
+++ b/Desafio HTML5/_css/form.css
@@ -28,10 +28,10 @@ legend{
     font-size: 13pt;
 }
 
-area {
-    display: inline;
-    cursor: pointer;
-    background-color: yellow;
+#cont-img{
+    border: 1px solid white;
+    border-radius: 50px;
+    background-color: wheat;
 }
 
 @media only screen and (max-width: 600px) {
