--- a/Desafio HTML5/_css/form.css
+++ b/Desafio HTML5/_css/form.css
@@ -29,9 +29,22 @@ legend{
 }
 
 #cont-img{
-    border: 1px solid white;
     border-radius: 50px;
-    background-color: wheat;
+    background-color: #e4959e;
+}
+
+#add-img{
+    padding: auto;
+}
+
+#add-img:hover{
+    cursor: pointer;
+    background-color: gray;
+    border-radius: 5px;
+}
+
+input[type=radio]{
+    width: 10%;
 }
 
 @media only screen and (max-width: 600px) {
@@ -40,10 +53,6 @@ legend{
         margin: 0px;
         padding: 0px;
     }
-}
-
-input[type=radio]{
-    width: 10%;
 }
 
 @media only screen and (max-width: 700px) {
